@@ -40,6 +40,14 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="4.0.12" date="2022-05-29">
+      <description>
+	<p>
+	  Minor bug-fixes.
+	</p>
+      </description>
+    </release>
+
     <release version="4.0.8" date="2022-05-26">
       <description>
 	<p>
